--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - cool-thing</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 <script type="importmap">
@@ -25,6 +35,9 @@
   import {
     CopyShader
   } from 'three/addons/shaders/CopyShader.js';
+  import {
+    GLTFLoader
+  } from 'three/addons/loaders/GLTFLoader.js';
   let container;
   let camera, scene, renderer;
   let video, texture, material, mesh;
@@ -38,6 +51,7 @@
     materials = [],
     xgrid = 20,
     ygrid = 10;
+  let model = new THREE.Object3D()
   const startButton = document.getElementById('startButton');
   startButton.addEventListener('click', function() {
     init();
@@ -90,13 +104,13 @@
         mesh = new THREE.Mesh(geometry, material);
         mesh.originalPosition = {};
         mesh.originalPosition.x = (i - xgrid / 2) * xsize;
-        mesh.position.x = Math.random() *xsize * xgrid;
+        mesh.position.x = Math.random() * xsize * xgrid;
         mesh.originalPosition.y = (j - ygrid / 2) * ysize;
         mesh.position.y = Math.random() * ysize * ygrid;
         mesh.position.z = 0;
         mesh.scale.x = mesh.scale.y = mesh.scale.z = 1;
         mesh.rotation.x = Math.random() * 10;
-        mesh.rotation.y = Math.random() * 10; 
+        mesh.rotation.y = Math.random() * 10;
         scene.add(mesh);
         meshes[cube_count] = mesh;
         cube_count += 1;
@@ -114,6 +128,14 @@
     composer.addPass(effectCopy);
     //
     window.addEventListener('resize', onWindowResize);
+    const loader = new GLTFLoader();
+    loader.load('rick_astley.glb', (gltf) => {
+      model = glt.scene
+      model.position.x = 10
+      scene.add(model);
+    }, undefined, (error) => {
+      console.error(error);
+    });
   }
 
   function onWindowResize() {
@@ -142,9 +164,10 @@
     requestAnimationFrame(animate);
     render();
   }
-  let h, counter = 1;
+  let h, counter = 1000;
 
   function render() {
+    model.rotation.y += 0.1;
     const time = Date.now() * 0.00005;
     camera.position.x += (mouseX - camera.position.x) * 0.05;
     camera.position.y += (-mouseY - camera.position.y) * 0.05;
@@ -154,14 +177,14 @@
       h = (360 * (material.hue + time) % 360) / 360;
       material.color.setHSL(h, material.saturation, 0.5);
     }
-    if (counter % 1000 > 200) {
+    if (counter % 1000 > 200 && counter < 15000) {
       for (let i = 0; i < cube_count; i++) {
         mesh = meshes[i];
-        mesh.rotation.x *= 0.9
-        mesh.rotation.y *= 0.9
-        mesh.position.x -= (mesh.position.x - mesh.originalPosition.x)* 0.1
-        mesh.position.y -= (mesh.position.y - mesh.originalPosition.y) * 0.1
-         }
+        mesh.rotation.x *= 0.95
+        mesh.rotation.y *= 0.95
+        mesh.position.x -= (mesh.position.x - mesh.originalPosition.x) * 0.03
+        mesh.position.y -= (mesh.position.y - mesh.originalPosition.y) * 0.03
+      }
     }
     counter++;
     renderer.clear();
@@ -171,5 +194,10 @@
 
 <div id="overlay"> <button id="startButton">Play</button> </div>
 <div id="container"></div>
-<video id="video" loop crossOrigin="anonymous" playsinline style="display: none" src="https://ia601406.us.archive.org/29/items/never-gonna-give-you-up-4-k/Never%20Gonna%20Give%20You%20Up%204K.mp4">
+<video id="video" loop crossOrigin="anonymous" playsinline style="display:none" src="video.mp4">
 </video>
+<!-- partial -->
+  <script type="module" src="./script.js"></script>
+
+</body>
+</html>
