--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - cool-thing</title>
+  <title>Cool Thing</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -49,8 +49,8 @@
   let cube_count;
   const meshes = [],
     materials = [],
-    xgrid = 20,
-    ygrid = 10;
+    xgrid = 10,
+    ygrid = 5;
   let model = new THREE.Object3D()
   const startButton = document.getElementById('startButton');
   startButton.addEventListener('click', function() {
