--- a/index.html
+++ b/index.html
@@ -89,4 +89,4 @@
         counter++; 
         renderer.clear(); 
         composer.render(); 
-      } </script> <div id="overlay"> <button id="startButton">Play</button> </div> <div id="container"></div> <video id="video" loop crossOrigin="anonymous" playsinline style="display:none" src="video.mp4"> </video> <!-- partial --> <script type="module" src="./script.js"></script> </body> </html>
+      } </script> <div id="overlay"> <button id="startButton">Click Me :)</button> </div> <div id="container"></div> <video id="video" loop crossOrigin="anonymous" playsinline style="display:none" src="video.mp4"> </video> <!-- partial --> <script type="module" src="./script.js"></script> </body> </html>
